# novel-agent-cockpit

./: .gitignore  LICENSE  README.md  STATUS.md  glm-style-writing-agent-blueprint.md  pyproject.toml
app/: __init__.py  api.py  config.py  db.py  integrations.py  models.py  orchestrator.py  repository.py  schemas.py
app/providers/: base.py  factory.py  mock_provider.py  openai_provider.py
app/static/: app.js  index.html  styles.css
tests/: conftest.py  test_workflow.py
