[project]
name = "novel-agent-cockpit"
version = "0.1.0"
description = "GLM-style novel writing agent cockpit MVP"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
openai = [
  "openai>=1.40.0",
]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

